--- a/package.json
+++ b/package.json
@@ -4,19 +4,34 @@
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
-    "@prisma/fetch-engine": "^3.6.0-19.9372e13dbcc967fb9bd1f954bed16d7b7b96d4f9",
     "@types/download": "^8.0.1",
-    "node-fetch": "^3.1.0",
+    "@types/node-fetch": "^3.0.3",
+    "electron": "^16.0.4",
+    "esbuild": "^0.14.2",
     "ts-node": "^10.4.0",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.5.2"
   },
   "dependencies": {
-    "@types/node": "^16.11.10",
-    "download": "^8.0.0"
+    "@prisma/debug": "^3.6.0",
+    "@prisma/fetch-engine": "^3.7.0-9.a2cf8baf0c316e45ff992f1605b3c6cb8990e7b3",
+    "@prisma/get-platform": "^3.6.0-22.c7e82a080476bea336bff9af2bbad180bd2772e7",
+    "@types/fs-extra": "^9.0.13",
+    "@types/node": "^16.11.11",
+    "chalk": "^5.0.0",
+    "download": "^8.0.0",
+    "fs-extra": "^10.0.0",
+    "make-dir": "^3.1.0",
+    "node-fetch": "^3.1.0",
+    "p-filter": "^3.0.0",
+    "ts-node": "^10.4.0",
+    "ts-node-dev": "^1.1.8",
+    "typescript": "^4.5.2"
   },
   "scripts": {
-    "clean": "rm -rf ./binaries/all_commits/*",
-    "dev": "ts-node-dev --no-notify --respawn --transpile-only src"
+    "clean": "rm -rf ./downloads/*",
+    "build": "esbuild src/main.ts --outfile=dist/main.js --bundle --platform=node --target=node14 --minify --sourcemap",
+    "start": "node dist/main.js",
+    "dev": "ts-node-dev --no-notify --respawn --transpile-only src/main.ts"
   }
 }
