--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-binaries/*
+downloads/*
 # Created by https://www.toptal.com/developers/gitignore/api/windows,linux,macos,visualstudio,visualstudiocode,jetbrains+all,node,git,yarn
 # Edit at https://www.toptal.com/developers/gitignore?templates=windows,linux,macos,visualstudio,visualstudiocode,jetbrains+all,node,git,yarn
 
