--- a/package.json
+++ b/package.json
@@ -13,20 +13,23 @@
     "typescript": "^4.5.2"
   },
   "dependencies": {
-    "@prisma/debug": "^3.6.0",
-    "@prisma/fetch-engine": "^3.7.0-9.a2cf8baf0c316e45ff992f1605b3c6cb8990e7b3",
-    "@prisma/get-platform": "^3.6.0-22.c7e82a080476bea336bff9af2bbad180bd2772e7",
+    "@prisma/fetch-engine": "2.23.0",
     "@types/fs-extra": "^9.0.13",
     "@types/node": "^16.11.11",
     "chalk": "^5.0.0",
     "download": "^8.0.0",
     "fs-extra": "^10.0.0",
+    "hasha": "^5.2.2",
     "make-dir": "^3.1.0",
     "node-fetch": "^3.1.0",
     "p-filter": "^3.0.0",
+    "p-retry": "^5.0.0",
+    "rimraf": "^3.0.2",
+    "tempy": "^2.0.0",
     "ts-node": "^10.4.0",
     "ts-node-dev": "^1.1.8",
-    "typescript": "^4.5.2"
+    "typescript": "^4.5.2",
+    "zlib": "^1.0.5"
   },
   "scripts": {
     "clean": "rm -rf ./downloads/*",
