chore: 升级依赖,自动从依赖获取将要下载的prisma版本,更新说明

--- a/package.json
+++ b/package.json
@@ -6,29 +6,30 @@
   "devDependencies": {
     "@types/download": "^8.0.1",
     "@types/node-fetch": "^3.0.3",
-    "electron": "^16.0.4",
-    "esbuild": "^0.14.2",
+    "@types/rimraf": "^3.0.2",
+    "electron": "^16.0.7",
+    "esbuild": "^0.14.14",
     "ts-node": "^10.4.0",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.5.2"
   },
   "dependencies": {
-    "@prisma/fetch-engine": "3.6.0-24.dc520b92b1ebb2d28dc3161f9f82e875bd35d727",
+    "@prisma/fetch-engine": "3.9.0-45.9c250037509f550c7339a25474b76ad0c6e466bf",
     "@types/fs-extra": "^9.0.13",
-    "@types/node": "^16.11.11",
+    "@types/node": "^17.0.12",
     "chalk": "^5.0.0",
     "download": "^8.0.0",
     "fs-extra": "^10.0.0",
     "hasha": "^5.2.2",
     "make-dir": "^3.1.0",
-    "node-fetch": "^3.1.0",
+    "node-fetch": "^3.2.0",
     "p-filter": "^3.0.0",
     "p-retry": "^5.0.0",
     "rimraf": "^3.0.2",
     "tempy": "^2.0.0",
     "ts-node": "^10.4.0",
     "ts-node-dev": "^1.1.8",
-    "typescript": "^4.5.2",
+    "typescript": "^4.5.5",
     "zlib": "^1.0.5"
   },
   "scripts": {
